# 5060Comfy

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py  start_comfyui.sh
scripts/: install.sh  start_comfyui.sh
src/comfyui_manager/: config_manager.py  gui.py  main.py  process_manager.py  simple_main.py  system_monitor.py  utils.py
src/comfyui_manager/widgets/: __init__.py  dialogs.py  widgets.py
